# JobJitsu

./: README.md  main.py  pyproject.toml
games/: __init__.py  digitspan.py  flashback.py  numerosity.py  pathfinder.py  shapedance.py
